--- a/navbarStyle.css
+++ b/navbarStyle.css
@@ -1,11 +1,6 @@
+/*MAIN CSS*/
 html  {
     background-color: #FFDEEF;
-
-/*
-    background-image: url("images/jumbotron.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100%;*/
 }
 
 #container{
@@ -18,6 +13,7 @@ html  {
     box-shadow: 10px 10px 5px rgb(39, 39, 39); /*shadow*/
 }
 
+/*NAVBARS*/
 #navbarContainer{
     background-color:#FFFEEB;
     overflow: hidden; /*all items fit into the navbarContainer*/
@@ -32,12 +28,15 @@ html  {
 
 #navbar, #socialmediaNavbar{
     list-style-type: none;
-    padding: 1%;
+    padding: 0%; /*navbar all the way to the left*/
 }
+
 
 #socialmediaNavbar{
     display: flex;
     text-align: center;
+    margin-left: 25%;
+    width: 50%;
 }
 
 .socialmediaNavbarLi{
@@ -53,116 +52,176 @@ html  {
 }
 
 
-@media screen and (max-width: 904px) {/*window smaller than 904px*/
+.NavbarA {
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 5px;
+    text-decoration: none;
+    border: 1px solid #C9AFBC;
+    font-size: 15px;
+    border-left: none;
+}
+
+.navbarHide{
+    height:0px; /*hide links*/
+    visibility: hidden;
+}
+
+.navbarShow{
+    height: auto; /*hide links*/
+}
+
+/*POSITION NAVBAR*/
+
+@media screen and (max-width: 500px) {/*window smaller than 500px*/
+    
     #navbarLogo{
-        padding-top: 10%;
-        padding-left: 10%;
+        float: left;
+        margin: 2%;
     }
 
     #shoppingCartLogoA{
         float: right;
-        padding-right: 10%;
-        padding-top: 15%;
+        margin-top: 10%;
+        margin-right: 8%;
     }
 
     #hamburgerMenuA{
-        padding-right: 2%;
-        padding-top: 15%;
+        margin-top: 10%;
         float: right;
         outline: none !important;  /*no border around button after clicking*/
         background-color: inherit; /*no color*/
         border: none;
     }
     
-    /*SMARTPHONE*/
-    @media screen and (max-width: 380px) {/*window smaller than 380px*/
-        #shoppingCartLogoA{
-            float: right;
-            padding-right: 10%;
-            padding-top: 20%;
-        }
+    #navbar{
+        margin-top: 33%;
+        margin-left: 0%;
+        width: 100%;
+    }
+
+    .NavbarA:hover:not(.active) {
+        background-color: rgb(255, 230, 252);
+        transform: scale(1.1);
+    }
+
+    #socialmediaNavbar{
+        margin-left: 0%;
+        width: 100%;
+    }
+
+}
+
+@media screen and (min-width: 500px) {/*window bigger than 500px*/
     
-        #hamburgerMenuA{
-            padding-right: 2%;
-            padding-top: 20%;
-            float: right;
-            outline: none !important;  /*no border around button after clicking*/
-            background-color: inherit; /*no color*/
-            border: none;
-        }
+    #navbarLogo{
+        float: left;
+        margin: 5%;
+    }
+
+    #shoppingCartLogoA{
+        float: right;
+        margin-top: 10%;
+        margin-right: 8%;
+    }
+
+    #hamburgerMenuA{
+        margin-top: 10%;
+        float: right;
+        outline: none !important;  /*no border around button after clicking*/
+        background-color: inherit; /*no color*/
+        border: none;
+    }
+    
+    #navbar{
+        margin-top: 35%;
+        margin-left: 0%;
+        width: 100%;
+    }
+
+    .NavbarA:hover:not(.active) {
+        background-color: rgb(255, 230, 252);
+        transform: scale(1.1);
+    }
+
+}
+
+@media screen and (min-width: 600px) {/*window bigger than 500px*/
+
+    #navbar{
+        margin-top: 30%;
+        margin-left: 0%;
+        width: 100%;
+    }
+
+}
+
+@media screen and (min-width: 680px) {/*window bigger than 680px*/
+
+    #navbar{
+        margin-top: 25%;
+        margin-left: 0%;
+        width: 100%;
+    }
+
+}
+
+@media screen and (min-width: 819px) {/*window bigger than 750px*/
+
+    #hamburgerMenuA{
+        visibility: hidden;
+    }
+
+    #navbarContainer{ /*FLEXBOX*/
+        display: flex;
+    }
+
+    #navbarLogo{
+        margin: 2%;
+        width: 14%;    
+        order: 0;
+    }
+
+    #shoppingCartLogoA{
+        order: 1;
+        width: 8%;    
+        margin: 5%;
+        margin-top: 6%;
+    }
+
+    #shoppingCartLogoImg{
+        width: 100%;    
+    }
+
+    #navbar{    /*INNER FLEXBOX*/
+        order: 0;
+        margin: 0%;
+        margin-left: -5%;
+        margin-right: -3%;
+        width: 80%;    
+        padding-top: 7%;
+    }
+
+    .NavbarRightLogin{
+        float: right;
+    }
+
+    .NavbarLi{
+        display: inline-block;
+        margin-left: 3%;
     }
 
     .NavbarA {
         display: block;
         color: black;
         text-align: center;
-        padding: 5px;
+        padding: 9px;
         text-decoration: none;
-        font-size: 15px;
-    }
-      
-    .NavbarA:hover:not(.active) {
-        background-color: rgb(255, 230, 252);
-        transform: scale(1.1);
+        border: none;
+        font-size: 18px;
     }
     
-    .navbarHide{
-        height:0px; /*hide links*/
-        visibility: hidden;
-    }
-
-    .navbarShow{
-        height: auto; /*hide links*/
-    }
-}
-
-@media screen and (min-width: 904px){ /*from 904px and bigger*/
-    
-    #navbarContainer{
-        display: grid;
-        grid-template-areas: "logo hamburger nav bag";
-        grid-template-columns: repeat(4,1fr);
-        align-items: end;
-    }
-
-    #navbarLogo{
-        padding-top: 2%;
-        padding-left: 2%;
-        padding-bottom: 2%;
-        margin-left: 5%;
-        grid-area: logo;
-    }
-
-    #hamburgerMenuA{
-        grid-area: hamburger;
-        visibility: hidden;
-    }
-
-    #navbar{
-        grid-area: nav;
-        display: grid;
-        grid-template-areas: "home about shop contact login";
-    }
-
-    #shoppingCartLogoA{
-        grid-area: bag;
-        margin-bottom: 10px;
-        margin-left: 2em;
-        text-align: center;
-    }
-
-    #loginLi{
-        margin-left: 60%; /*space between contact and login*/
-    }
-
-    .NavbarA {
-        color: black;
-        text-justify: center;
-        padding: 10px;
-        text-decoration: none;
-        font-size: 20px;
-    }
-
     #loginA{
         color: black;
         background-color: rgb(255, 230, 252);
@@ -170,11 +229,16 @@ html  {
         border:1px solid #C9AFBC;
     }
 
-      
     .NavbarA:hover:not(.active) {
         background-color: rgb(255, 230, 252);
-        border-radius: 10%;
     }
+}
 
+
+@media screen and (min-width: 980px) {/*window bigger than 750px*/
+
+    #shoppingCartLogoA{
+        margin-top: 5%;
+    }
 
 }
