--- a/selectedArticleWindowStyle.css
+++ b/selectedArticleWindowStyle.css
@@ -36,6 +36,13 @@ input::-webkit-inner-spin-button {
     margin: 0;
 }
 
+#addedToCartMessage{
+    margin-left: 5%;
+    width: 100%;
+    margin-top: 0%;
+    color: green;
+}
+
 
 @media screen and (max-width: 700px) {/*window smaller than 700px*/
     
@@ -106,6 +113,11 @@ input::-webkit-inner-spin-button {
 
     #addToCart{
         margin-left: 0%;
+    }
+
+    #addedToCartMessage{
+        margin-left: 0%;
+        
     }
     
 }
