--- a/shoppingcartStyle.css
+++ b/shoppingcartStyle.css
@@ -4,11 +4,13 @@ table,th,td {
 }
 
 th,td {
-  padding: 5px;
+  padding: 3px;
+  font-size: small;
 }
 
 th {
   text-align: left;
+  font-size: small;
 }
 
 #shoppingContainer {
