--- a/accountStyle.css
+++ b/accountStyle.css
@@ -82,6 +82,15 @@ th {
   padding-right: 5px;
 }
 
+@media screen and (max-width: 330px) {/*window smaller than 330px*/
+  
+  #orderContainer{
+    overflow-x: scroll;
+  }
+  
+}
+
+
 @media screen and (min-width: 700px) {
   /*from 700px and bigger*/
 
