--- a/aboutStyle.css
+++ b/aboutStyle.css
@@ -27,6 +27,8 @@
 
     #aboutImg{
         border:5px solid #C9AFBC;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        
     }
 }
 
@@ -43,11 +45,13 @@
         width: 90%;
         padding: 2%;
         align-self: center;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 
     #aboutImg{
         border:5px solid #C9AFBC;
         align-self: center;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 
     #emptySpace{
