--- a/selectedArticleWindowStyle.css
+++ b/selectedArticleWindowStyle.css
@@ -43,6 +43,11 @@ input::-webkit-inner-spin-button {
     color: green;
 }
 
+#articleImg{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+
 
 @media screen and (max-width: 700px) {/*window smaller than 700px*/
     
