--- a/shopStyle.css
+++ b/shopStyle.css
@@ -12,6 +12,7 @@
         display: flex;
         align-items: center;
         flex-direction: column;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         margin-bottom: 10%;
     }
 
@@ -41,7 +42,8 @@
         align-items: center;
         flex-direction: column;
         margin: 2%;
-        
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    
     }
 
     .articleLinkTitleA{
