--- a/indexStyle.css
+++ b/indexStyle.css
@@ -13,6 +13,15 @@
     transform: scale(1.2);
 }
 
+#indexImg{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border:3px solid #C9AFBC;
+}
+
+#titleDivContainer{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 @media screen and (max-width: 414px) {/*window smaller than 414px*/
     
     #imgTitleDivContainer{
@@ -25,12 +34,9 @@
     #titleDivContainer{
         border:1px solid #C9AFBC;
         width: 80%;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 
-    #indexImg{
-        border:5px solid #C9AFBC;
-    }
-    
 }
 
 @media screen and (min-width: 414px){ /*from 414px and bigger*/
@@ -51,7 +57,6 @@
     #indexImg{
         margin-right: 5%;
         flex-grow: 1;
-        border:5px solid #C9AFBC;
     }
     
     #emptySpace{
@@ -73,7 +78,6 @@
     #indexImg{
         margin-right: 10%;
         flex-grow: 1;
-        border:5px solid #C9AFBC;
     }
 
     #emptySpace{
